--- a/userAuthentication/src/main/resources/application.properties
+++ b/userAuthentication/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=userAuthentication
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/AiInterviewApp?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=*******
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
