--- a/Gateway/src/main/resources/application.properties
+++ b/Gateway/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=Gateway
 server.port=8080
-
-spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
+eureka.instance.hostname=localhost
+spring.main.web-application-type=reactive
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
